fix(core/select):  Drop the --active selector so the suffix is only hidden when the clear icon is actually visible (hover/focus/typing)

--- a/packages/core/src/select/_select-styles.scss
+++ b/packages/core/src/select/_select-styles.scss
@@ -118,7 +118,6 @@
 
   &.#{text-field.$prefix}--clearable {
     &:hover:not(.#{text-field.$prefix}--disabled):not(.#{text-field.$prefix}--readonly),
-    &.#{text-field.$prefix}--active,
     &.#{text-field.$prefix}--typing,
     &:focus-within:not(.#{text-field.$prefix}--disabled):not(.#{text-field.$prefix}--readonly) {
       .#{text-field.$prefix}__clear-icon {
